--- a/src/components/nav-bar/NavBar.css
+++ b/src/components/nav-bar/NavBar.css
@@ -1,4 +1,9 @@
 .nav-bar {
+  position: fixed;
+  width: var(--max-width);
+  background-color: hsla(0, 0%, 100%, 0.7);
+  backdrop-filter: blur(5px);
+
   .navigation {
     padding: 16px;
     border-bottom: 1px solid rgba(2, 23, 53, 0.1);
