--- a/src/components/resume/Resume.css
+++ b/src/components/resume/Resume.css
@@ -1,5 +1,26 @@
 .resume {
-  height: 100%;
   display: flex;
   flex-direction: row;
+  width: 1000px;
+  /* margin: auto; */
+  align-self: center;
+  padding-top: 80px;
+  /* height: calc(100vh - 60px); */
+  text-align: justify;
+
+  .left-nav {
+    position: fixed;
+    width: 200px;
+    height: 100%;
+    /* background-color: #ccc; */
+  }
+
+  .right-content {
+    display: flex;
+    flex-direction: column;
+    height: 100%;
+    margin-left: 200px;
+    padding: 0 20px;
+    /* background-color: #eee; */
+  }
 }
