--- a/src/components/nav-bar/NavBar.css
+++ b/src/components/nav-bar/NavBar.css
@@ -33,8 +33,10 @@
       }
     }
 
-    .left-nav > p {
+    .left-nav > a {
+      text-decoration: none;
       margin: 0;
+      color: black;
     }
 
     .end-nav {
