--- a/src/components/resume/Resume.css
+++ b/src/components/resume/Resume.css
@@ -1,7 +1,7 @@
 .resume {
   display: flex;
   flex-direction: row;
-  width: 1000px;
+  max-width: 1000px;
   align-self: center;
   /* padding-top: 80px; */
   text-align: justify;
